feat: add manifest.json file and icon images

--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/svg+xml" href="/assets/icon-192x192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Card-Das game</title>
+    <link rel="apple-touch-icon" href="/assets/icon-192x192.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <title>Card-Das game - The NFT Arena</title>
   </head>
   <body>
     <div id="root"></div>
