--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/icon-192x192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="/assets/landing-background.webp" />
     <link rel="apple-touch-icon" href="/assets/icon-192x192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>Card-Das game - The NFT Arena</title>
